Add accessibility to image.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     tools:context="com.example.android.scorekeeperbaseball.MainActivity">
 
     <ImageView
+        android:contentDescription="@string/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
