--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,8 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/out"/>
+                android:text="@string/out"
+                android:onClick="outsHome"/>
 
             <Button
                 android:layout_width="wrap_content"
@@ -113,7 +114,8 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/out"/>
+                android:text="@string/out"
+                android:onClick="outsVisitor"/>
 
             <Button
                 android:layout_width="wrap_content"
