--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -120,7 +120,8 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/slam"/>
+                android:text="@string/slam"
+                />
 
         </LinearLayout>
 
@@ -129,11 +130,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@id/innings"
+        android:layout_above="@id/inning"
         android:text="@string/in"/>
 
     <TextView
-        android:id="@+id/innings"
+        android:id="@+id/inning"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/reset"
