--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginTop="@dimen/margin2"
         android:baselineAligned="false" >
 
         <LinearLayout
@@ -28,50 +29,69 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/home"/>
+                android:text="@string/home"
+                android:textSize="@dimen/team"
+                android:textColor="@color/colorPrimaryDark"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/runs"/>
+                android:text="@string/runs"
+                android:textSize="@dimen/run_out"
+                android:textColor="@color/team"/>
 
             <TextView
                 android:id="@+id/runsHome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/initial"/>
+                android:text="@string/initial"
+                android:textSize="@dimen/nums"
+                android:textColor="@color/score"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/outs"/>
+                android:text="@string/outs"
+                android:textSize="@dimen/run_out"
+                android:textColor="@color/team"/>
 
             <TextView
                 android:id="@+id/outsHome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/initial"/>
+                android:text="@string/initial"
+                android:textSize="@dimen/nums2"
+                android:textColor="@color/team"/>
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin"
+                android:layout_marginLeft="@dimen/button_sides"
+                android:layout_marginRight="@dimen/button_sides"
                 android:text="@string/run"
                 android:onClick="runScoreHome"/>
 
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin"
+                android:layout_marginLeft="@dimen/button_sides"
+                android:layout_marginRight="@dimen/button_sides"
                 android:text="@string/out"
                 android:onClick="outsHome"/>
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin"
+                android:layout_marginLeft="@dimen/button_sides"
+                android:layout_marginRight="@dimen/button_sides"
                 android:text="@string/slam"
                 android:onClick="grandSlamHome"/>
 
@@ -93,50 +113,69 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/visit"/>
+                android:text="@string/visit"
+                android:textSize="@dimen/team"
+                android:textColor="@color/colorPrimaryDark"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/runs"/>
+                android:text="@string/runs"
+                android:textSize="@dimen/run_out"
+                android:textColor="@color/team"/>
 
             <TextView
                 android:id="@+id/runsVisitor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/initial"/>
+                android:text="@string/initial"
+                android:textSize="@dimen/nums"
+                android:textColor="@color/score"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/outs"/>
+                android:text="@string/outs"
+                android:textSize="@dimen/run_out"
+                android:textColor="@color/team"/>
 
             <TextView
                 android:id="@+id/outsVisitor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/initial"/>
+                android:text="@string/initial"
+                android:textSize="@dimen/nums2"
+                android:textColor="@color/team"/>
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin"
+                android:layout_marginLeft="@dimen/button_sides"
+                android:layout_marginRight="@dimen/button_sides"
                 android:text="@string/run"
                 android:onClick="runScoreVisitor"/>
 
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin"
+                android:layout_marginLeft="@dimen/button_sides"
+                android:layout_marginRight="@dimen/button_sides"
                 android:text="@string/out"
                 android:onClick="outsVisitor"/>
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin"
+                android:layout_marginLeft="@dimen/button_sides"
+                android:layout_marginRight="@dimen/button_sides"
                 android:text="@string/slam"
                 android:onClick="grandSlamVisitor"
                 />
@@ -150,7 +189,9 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_above="@id/inning"
-        android:text="@string/in"/>
+        android:text="@string/in"
+        android:textSize="@dimen/run_out"
+        android:textColor="@color/team"/>
 
     <TextView
         android:id="@+id/inning"
@@ -158,7 +199,9 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_above="@id/reset"
-        android:text="@string/initial"/>
+        android:text="@string/initial"
+        android:textSize="@dimen/nums2"
+        android:textColor="@color/score"/>
 
     <Button
         android:id="@+id/reset"
@@ -166,6 +209,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/tiny_margin"
         android:text="@string/reset"
         android:onClick="resetAll"/>
 
