Add background image. Adjust colors.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#01579B</color>
     <color name="colorPrimaryDark">#00092D</color>
     <color name="colorAccent">#E03A3E</color>
-    <color name="team">#616161</color>
+    <color name="team">#2F4F4F</color>
     <color name="score">#000000</color>
 </resources>
