--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Cropped Photo: Courtesy - Wesley University / Creative Commons Attribution 2.0 Generic -->
+<?xml version="1.0" encoding="utf-8"?><!-- Cropped Photo: Courtesy - Wesley University / Creative Commons Attribution 2.0 Generic -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,18 +6,18 @@
     tools:context="com.example.android.scorekeeperbaseball.MainActivity">
 
     <ImageView
-        android:contentDescription="@string/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:contentDescription="@string/image"
         android:scaleType="centerCrop"
         android:src="@drawable/baseball_4" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginTop="@dimen/margin2"
-        android:baselineAligned="false" >
+        android:baselineAligned="false"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="@dimen/none"
@@ -31,16 +30,16 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/home"
-                android:textSize="@dimen/team"
-                android:textColor="@color/colorPrimaryDark"/>
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="@dimen/team" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/runs"
-                android:textSize="@dimen/run_out"
-                android:textColor="@color/team"/>
+                android:textColor="@color/team"
+                android:textSize="@dimen/run_out" />
 
             <TextView
                 android:id="@+id/runsHome"
@@ -48,16 +47,16 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/initial"
-                android:textSize="@dimen/nums"
-                android:textColor="@color/score"/>
+                android:textColor="@color/score"
+                android:textSize="@dimen/nums" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/outs"
-                android:textSize="@dimen/run_out"
-                android:textColor="@color/team"/>
+                android:textColor="@color/team"
+                android:textSize="@dimen/run_out" />
 
             <TextView
                 android:id="@+id/outsHome"
@@ -65,44 +64,43 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/initial"
-                android:textSize="@dimen/nums2"
-                android:textColor="@color/team"/>
+                android:textColor="@color/team"
+                android:textSize="@dimen/nums2" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin"
                 android:layout_marginLeft="@dimen/button_sides"
                 android:layout_marginRight="@dimen/button_sides"
-                android:text="@string/run"
-                android:onClick="runScoreHome"/>
+                android:layout_marginTop="@dimen/margin"
+                android:onClick="runScoreHome"
+                android:text="@string/run" />
 
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin"
                 android:layout_marginLeft="@dimen/button_sides"
                 android:layout_marginRight="@dimen/button_sides"
-                android:text="@string/out"
-                android:onClick="outsHome"/>
+                android:layout_marginTop="@dimen/margin"
+                android:onClick="outsHome"
+                android:text="@string/out" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin"
                 android:layout_marginLeft="@dimen/button_sides"
                 android:layout_marginRight="@dimen/button_sides"
-                android:text="@string/slam"
-                android:onClick="grandSlamHome"/>
+                android:layout_marginTop="@dimen/margin"
+                android:onClick="grandSlamHome"
+                android:text="@string/slam" />
 
         </LinearLayout>
 
         <View
             android:layout_width="@dimen/bar"
             android:layout_height="match_parent"
-            android:background="@color/colorPrimary"
-            />
+            android:background="@color/colorPrimary" />
 
         <LinearLayout
             android:layout_width="@dimen/none"
@@ -115,16 +113,16 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/visit"
-                android:textSize="@dimen/team"
-                android:textColor="@color/colorPrimaryDark"/>
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="@dimen/team" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/runs"
-                android:textSize="@dimen/run_out"
-                android:textColor="@color/team"/>
+                android:textColor="@color/team"
+                android:textSize="@dimen/run_out" />
 
             <TextView
                 android:id="@+id/runsVisitor"
@@ -132,16 +130,16 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/initial"
-                android:textSize="@dimen/nums"
-                android:textColor="@color/score"/>
+                android:textColor="@color/score"
+                android:textSize="@dimen/nums" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/outs"
-                android:textSize="@dimen/run_out"
-                android:textColor="@color/team"/>
+                android:textColor="@color/team"
+                android:textSize="@dimen/run_out" />
 
             <TextView
                 android:id="@+id/outsVisitor"
@@ -149,37 +147,36 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/initial"
-                android:textSize="@dimen/nums2"
-                android:textColor="@color/team"/>
+                android:textColor="@color/team"
+                android:textSize="@dimen/nums2" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin"
                 android:layout_marginLeft="@dimen/button_sides"
                 android:layout_marginRight="@dimen/button_sides"
-                android:text="@string/run"
-                android:onClick="runScoreVisitor"/>
+                android:layout_marginTop="@dimen/margin"
+                android:onClick="runScoreVisitor"
+                android:text="@string/run" />
 
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin"
                 android:layout_marginLeft="@dimen/button_sides"
                 android:layout_marginRight="@dimen/button_sides"
-                android:text="@string/out"
-                android:onClick="outsVisitor"/>
+                android:layout_marginTop="@dimen/margin"
+                android:onClick="outsVisitor"
+                android:text="@string/out" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin"
                 android:layout_marginLeft="@dimen/button_sides"
                 android:layout_marginRight="@dimen/button_sides"
-                android:text="@string/slam"
+                android:layout_marginTop="@dimen/margin"
                 android:onClick="grandSlamVisitor"
-                />
+                android:text="@string/slam" />
 
         </LinearLayout>
 
@@ -188,30 +185,30 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:layout_above="@id/inning"
+        android:layout_centerInParent="true"
         android:text="@string/in"
-        android:textSize="@dimen/run_out"
-        android:textColor="@color/team"/>
+        android:textColor="@color/team"
+        android:textSize="@dimen/run_out" />
 
     <TextView
         android:id="@+id/inning"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:layout_above="@id/reset"
+        android:layout_centerInParent="true"
         android:text="@string/initial"
-        android:textSize="@dimen/nums2"
-        android:textColor="@color/score"/>
+        android:textColor="@color/score"
+        android:textSize="@dimen/nums2" />
 
     <Button
         android:id="@+id/reset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
         android:layout_marginBottom="@dimen/tiny_margin"
-        android:text="@string/reset"
-        android:onClick="resetAll"/>
+        android:onClick="resetAll"
+        android:text="@string/reset" />
 
 </RelativeLayout>
