Create savedInstanceState method. Create restoreInstanceState method. Add freezesText attribute on all data views.

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -43,6 +43,7 @@
 
                 <TextView
                     android:id="@+id/runsHome"
+                    android:freezesText="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -60,6 +61,7 @@
 
                 <TextView
                     android:id="@+id/outsHome"
+                    android:freezesText="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -126,6 +128,7 @@
 
                 <TextView
                     android:id="@+id/runsVisitor"
+                    android:freezesText="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -143,6 +146,7 @@
 
                 <TextView
                     android:id="@+id/outsVisitor"
+                    android:freezesText="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -200,6 +204,7 @@
 
             <TextView
                 android:id="@+id/inning"
+                android:freezesText="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
